--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -479,12 +479,12 @@
   position: absolute;
   bottom: -10px;
   left: 0;
-  width: 100%; /* Full width of the h2 */
+  width: 100%;
   height: 4px;
-  background-color: var(--accent-green, #609d9f); /* Custom color for underline */
-  transform-origin: left center; /* Makes the animation scale from the left */
-  transform: scaleX(0); /* Initially invisible */
-  transition: transform 0.3s ease; /* Smooth transition */
+  background-color: var(--accent-green, #609d9f);
+  transform-origin: left center;
+  transform: scaleX(1);
+  transition: transform 0.3s ease;
 }
 
 
