--- a/frontend/about.html
+++ b/frontend/about.html
@@ -17,6 +17,24 @@
 body{font-family:"Droid Serif",Georgia,serif;color:var(--ink);background:var(--bg);line-height:1.6}
 a{color:inherit;text-decoration:none}
 
+
+/* ACTIVE NAV LINK */
+.navlinks a[aria-current="page"] {
+text-shadow:0 0 10px rgba(255,255,255,.35)
+}
+
+.navlinks a[aria-current="page"]::after {
+  transform: scaleX(1);
+  background: #fff;
+}
+
+
+.drawer .menu a[aria-current="page"] {
+  border-color: var(--dark-teal);
+  color: var(--dark-teal);
+  font-weight: 700;
+}
+
 /* ================= HEADER ================= */
 .navbar{
   background:var(--dark-teal);
@@ -350,8 +368,8 @@ footer{
       <p>Privacy-first data analysis, designed for writers.</p>
     </div>
     <div class="footer-links">
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Use</a>
+      <a href="faq.html">Privacy Policy</a>
+      <a href="faq.html#terms-use">Terms of Use</a>
       <a href="contact.html">Contact</a>
     </div>
   </div>
